--- a/mainSections/designProcess.tex
+++ b/mainSections/designProcess.tex
@@ -17,7 +17,7 @@ In the fifth and final phase, the Build and Test phase, we will develop a risk a
 \newpage
 \subsection{Proposed Solutions}
 \noindent\textbf{Solution \#1:}\newline
-\indent One of our potential solutions offers fully-electric hangars—working with FBOs—to private businesses with an emphasis on cargo companies like Amazon, UPS, and FedEx. These companies have already set carbon-neutral goals as early as 2040 (Amazon announced this in 2019 and FedEx in 2021), so there is a large EA market in their industry. And since funding is a major EA issue, these companies could even sponsor the development from the get-go to ensure their specific needs are met. As discussed in our research, the power-density limitations of current battery technology would limit the cargo capabilities to small/middle weight deliveries. This would allow the companies to use EAs from their HUB airports to smaller regional locations—which would already be carrying comparatively smaller loads shorter distances. The solution would offer personalized tarmac routes for EAs and prioritization for such aircraft. This would be a major appeal to these businesses competing to offer the quickest delivery services in our new age of “next-day delivery.” \par
+\indent One of our potential solutions offers fully-electric hangars -- working with FBOs -- to private businesses with an emphasis on cargo companies like Amazon, UPS, and FedEx. These companies have already set carbon-neutral goals as early as 2040 (Amazon announced this in 2019 and FedEx in 2021), so there is a large EA market in their industry. And since funding is a major EA issue, these companies could even sponsor the development from the get-go to ensure their specific needs are met. As discussed in our research, the power-density limitations of current battery technology would limit the cargo capabilities to small/middle weight deliveries. This would allow the companies to use EAs from their HUB airports to smaller regional locations -- which would already be carrying comparatively smaller loads shorter distances. The solution would offer personalized tarmac routes for EAs and prioritization for such aircraft. This would be a major appeal to these businesses competing to offer the quickest delivery services in our new age of "next-day delivery." \par
 \begin{figure}[h!]
     \fbox{\includegraphics[width=0.5\textwidth]{amazon_hangar.jpg}}
     \centering
@@ -56,7 +56,7 @@ In the fifth and final phase, the Build and Test phase, we will develop a risk a
 
 \newpage
 \noindent\textbf{Solution \#5:}\newline
-\indent The implementation of large scalable energy storage and power generation systems is a key factor in reducing the carbon footprints airports carry. With the great increases in market demand for electric planes, so comes a greater demand for power storage - something not currently considered in large-scale generation systems. Effective implemenation of both a power generation and storage system has a twofold benefit for capitol investment. The first obvious benefit is that, obviously, there is capacity to charge EA. The second and more understated benefit is that if EA do not reach the anticipated market growth, an effective power storage system can be used to supply power to additional markets. This is especially adventageous when keeping in consideration that airports are largely a government-subsidized entity, and thusly have large capitol resources available for such a proposed infrastructure project.
+\indent The implementation of large scalable energy storage and power generation systems is a key factor in reducing the carbon footprints airports carry. With the great increases in market demand for electric planes, so comes a greater demand for power storage -- something not currently considered in large-scale generation systems. Effective implemenation of both a power generation and storage system has a twofold benefit for capitol investment. The first obvious benefit is that, obviously, there is capacity to charge EA. The second and more understated benefit is that if EA do not reach the anticipated market growth, an effective power storage system can be used to supply power to additional markets. This is especially adventageous when keeping in consideration that airports are largely a government-subsidized entity, and thusly have large capitol resources available for such a proposed infrastructure project.
 \begin{figure}[h!]
     \fbox{\includegraphics[width=0.7\textwidth]{large-scale.png}}
     \centering
