--- a/mainSections/prototyping.tex
+++ b/mainSections/prototyping.tex
@@ -18,7 +18,7 @@ The selection, analysis, and formulation of this prototype consists of the follo
 
 \newpage
 \subsection{Analysis of proposed solutions}
-In section \ref{designProcess}, the team created multiple solutions that they believed would satisfy our project's goals. All of these solutions satisfied a portion of what we attempt to solve in this publication. However, only one solution, or a combination of multiple, will make it to the prototyping phase. Substantial effort was invested into the creation of the proposed solutions in order to provide the prototyping phase a more concise and accurate selection process - as opposed to having \emph{obviously} poor solutions in the mix. The nature of our problem statment provides a variety of options that are entierly feasable as a design solution, and this can be seen in the resultant products from section \ref{designProcess}.\par
+In section \ref{designProcess}, the team created multiple solutions that they believed would satisfy our project's goals. All of these solutions satisfied a portion of what we attempt to solve in this publication. However, only one solution, or a combination of multiple, will make it to the prototyping phase. Substantial effort was invested into the creation of the proposed solutions in order to provide the prototyping phase a more concise and accurate selection process -- as opposed to having \emph{obviously} poor solutions in the mix. The nature of our problem statment provides a variety of options that are entierly feasable as a design solution, and this can be seen in the resultant products from section \ref{designProcess}.\par
 
 \subsection{Selection of the prototype}
 Due to the careful consideration of our solution design, it was quite easy to then utilize a both common and extremely powerful tool to arrive at our prototype route: the decision matrix. As established Penn State engineers, we were familiar with a method from a previous EDSGN 100 class that we agreed could work well for the task at hand. We ported the template to our purposes and discussed our "selection criteria" and their significance/weight. These criteria were the factors that we considered most relevant in determining the best solution, such as safety, cost, associated risk, etc. \par
@@ -139,10 +139,10 @@ In the case that electric planes take off in the coming decades, the airport is 
 \newpage
 \subsubsection{Power Generation}
 In this section of the prototype, there are four main green energy generation sources.\par
-The first and the most viable option currently is anti-glare solar panels. These panels, ideally, would be fastened on top of electric airplane hangars to receive the most sun exposure and help produce energy to recharge the electric planes. The available “anti-glare” technology would allow pilots to still land safely with the added benefit of absorbing more sunlight due to the coating.\par
+The first and the most viable option currently is anti-glare solar panels. These panels, ideally, would be fastened on top of electric airplane hangars to receive the most sun exposure and help produce energy to recharge the electric planes. The available "anti-glare" technology would allow pilots to still land safely with the added benefit of absorbing more sunlight due to the coating.\par
 Our second power generation prototype is wind turbines. These could be installed on the already built communication and signal towers or on adjacent buildings/structures. In theory, there would be smaller turbines in greater amounts that would aid the production of green energy. There is also the possibility of including larger turbines, but these would need to be strategically placed in order to avoid physical interference with the aircraft.\par
 Our third option and the hardest to implement would be geothermal tarmacs; a large portion of energy dissipated from planes comes from the friction (heat) between the tires and the tarmac. Each plane taking off-- and even more so landing-- would contribute to this power generation technique. \par
-Lastly, our fourth option-- which is intended to be more of a supplement to the established larger power generation solution-- is compression based electric walkways. These walkways, popularly referred to as “Pavegen” due to the leading company, works by generating electricity from each step taken on the walkway. As airports feature a lot of high foot-traffic areas, the walkways would turn these passenger routes into green energy. Although this is not a huge producer of energy, each tile creates about 2-4 joules per step - not an insignificant amount of energy considering the foot traffic present at an airport.
+Lastly, our fourth option-- which is intended to be more of a supplement to the established larger power generation solution-- is compression based electric walkways. These walkways, popularly referred to as "Pavegen" due to the leading company, works by generating electricity from each step taken on the walkway. As airports feature a lot of high foot-traffic areas, the walkways would turn these passenger routes into green energy. Although this is not a huge producer of energy, each tile creates about 2-4 joules per step -- not an insignificant amount of energy considering the foot traffic present at an airport.
 \newpage
 \subsubsection{Energy Logistics}
 In this section of the prototype, we explored the logistics of the energy infrastructure in relation to battery technology. We detail the different options in the recharging of aircraft through swapping the batteries or recharging them within the plane. We believe that recharging will be the favorable option as you don't have to pull out the entire battery to do so. The second aspect to consider in our prototype was the demand that these aircraft are going to place on the infrastructure. This will, of course, vary with the size of the airport, but we want to focus on servicing small to medium range aircraft. Our power generation considerations will have to complement this aspect, especially since airport electrical grids are typically near maximum capacity.\par
