--- a/appendices/fullApp.tex
+++ b/appendices/fullApp.tex
@@ -54,7 +54,7 @@ sat5652@psu.edu
 \begin{description}
     \item [Steve Betza] is a former corporate director of the Future Enterprise Initiative at Lockheed Martin. He served as an adviser to the Department of Defense, National Security Agency, and Defense Science Board, helping with electronic, U.S. industrial base, and manufacturing innovation issues. Betza led teams in developing advanced flight computers with IBM and held several executive titles at Lockheed Martin as a key figure in billion-dollar companies. He is also presently a Professor of Practice in Engineering Leadership at The Pennsylvania State University, making him a great candidate to interview for the purposes of that class project. Betza opened our eyes and broadened our horizons for our research and prototyping process. Our team learned most planes used today still have design frames from the '50-'60s, only really being updated internally. This means the option for swapping aircraft internals with alternate propulsion systems is extremely viable. From this, we concluded the transition from the planes we know and fly today to E-planes would be relatively seamless in-plane structure and flight behavior aspects. Our meeting with Betza withheld countless strides of improvement in our research and design process, but perhaps the most important takeaway was that the process of alternating aviation infrastructure into electric-based will be a long and difficult path; but nevertheless, completely attainable and maybe even natural.
     
-    \item [Bill Grauer] is a former test engineer for Boeing’s wind tunnel, vibration, and propulsion research facilities. He currently consults for Boeing’s Philadelphia site and has over 40 years of experience in the aircraft manufacturing industry. Mr. Grauer provided technical insight into aircraft hybridization, biofuels' viability as propulsion energy, and the technical hurdles associated with an electric propulsion system. Being a propulsion test engineer, there was visibility provided into the usage of biofuels in existing or modified engine architecture. Additionally, a brief touch on the usage of rotary-winged aircraft for UAM shows that enormous technical hurdles remain in this sector. Mr. Grauer’s involvement in the industry over a broad time period shows there is limited viability in the use of biofuels in existing or new airframes, and that electrically based propulsion is likely to be more well-received by -the airline industry, airport operators, and governmental bodies.
+    \item [Bill Grauer] is a former test engineer for Boeing's wind tunnel, vibration, and propulsion research facilities. He currently consults for Boeing's Philadelphia site and has over 40 years of experience in the aircraft manufacturing industry. Mr. Grauer provided technical insight into aircraft hybridization, biofuels' viability as propulsion energy, and the technical hurdles associated with an electric propulsion system. Being a propulsion test engineer, there was visibility provided into the usage of biofuels in existing or modified engine architecture. Additionally, a brief touch on the usage of rotary-winged aircraft for UAM shows that enormous technical hurdles remain in this sector. Mr. Grauer's involvement in the industry over a broad time period shows there is limited viability in the use of biofuels in existing or new airframes, and that electrically based propulsion is likely to be more well-received by -the airline industry, airport operators, and governmental bodies.
 \end{description}
 
 \section{Sign-off form for faculty advisor(s) and/or department chair(s)}
