--- a/legacy files/legacyCitations.bib
+++ b/legacy files/legacyCitations.bib
@@ -1,4 +1,3 @@
-
 %--------------------BEGIN ACTUAL CITATIONS DOWN BELOW HERE --------------------
 %% An online resource (BibLaTeX only)
 @online{ref1,
@@ -11,6 +10,7 @@
   urldate      = "June 23, 2022",
 }
 
+%REF 2:
 @online{ref2,
   author       = {Eliot Lees and Chris Watson},
   organization = {ICF International, Inc.},
@@ -21,6 +21,60 @@
   urldate      = "June 23, 2022",
 }
 
+%REF 3:
+@online{ref3,
+  author       = {},
+  organization = {Eaton},
+  title        = {SKYCHARGE | Overview},
+  year         = {2022},
+  month        = {Jun},
+  url          = {https://www.eaton.com/ch/en-gb/catalog/emobility/skycharge.html},
+  urldate      = "June 23, 2022",
+}
+
+%REF 4:
+@online{ref4,
+  author       = {John Fialka},
+  organization = {Scientific American},
+  title        = {Electric Planes Take Off},
+  year         = {2022},
+  month        = {May},
+  url          = {https://www.scientificamerican.com/article/electric-planes-take-off/},
+  urldate      = "June 23, 2022",
+}
+
+%REF 5:
+@report{ref5,
+  author       = {Kristi Moriarty and Allison Kvien},
+  organization = {National Renewable Energy Laboratory},
+  title        = {U.S. Airport Infrastructure and Sustainable Aviation Fuel},
+  year         = {2021},
+  month        = {Feb},
+  url          = {https://afdc.energy.gov/files/u/publication/U.S.-airport-infrastructure-and-sustainable-aviation-fuel.pdf},
+  urldate      = "June 22, 2022",
+}
+
+%REF 6:
+@online{ref6,
+  author       = {Leigh Krietsch Boerner},
+  organization = {Chemical \& Engineering News},
+  title        = {Airlines want to make flight more sustainable. How will they do it?},
+  year         = {2021},
+  month        = {Sep},
+  url          = {https://cen.acs.org/environment/sustainability/Airlines-want-make-flight-sustainable/99/i32},
+  urldate      = "June 23, 2022",
+}
+
+@online{ref7,
+  author       = "",
+  title        = "Jet Fuel Price Monitor",
+  organization = "International Air Transport Association (IATA)",
+  year         = 2022,
+  url          = {https://www.iata.org/en/publications/economics/fuel-monitor/},
+  urldate      = "", %need this
+}
+
+%REF 19:
 @online{ref19,
   author       = {},
   organization = {Federal Aviation Administration},
@@ -30,6 +84,8 @@
   url          = {https://www.faa.gov/air_traffic/by_the_numbers/},
   urldate      = "June 21, 2022",
 }
+
+%REF 20:
 @online{ref20,
   author       = {},
   organization = {The Government of Queensland, Australia},
@@ -39,6 +95,8 @@
   url          = {https://www.qld.gov.au/environment/management/monitoring/air/air-pollution/pollutants/nitrogen-oxides/},
   urldate      = "June 21, 2022",
 }
+
+%REF 21:
 @online{ref21,
   author       = {Wassener, Bettina},
   organization = {The New York Times},
@@ -48,6 +106,8 @@
   url          = {https://www.nytimes.com/2011/10/10/business/global/10iht-green10.html#:~:text=Improved\%20designs\%20and\%20materials\%20mean,the\%20drive\%20to\%20lower\%20emissions},
   urldate      = "June 21, 2022",
 }
+
+%REF 22:
 @online{ref22,
   author       = {},
   organization = {Air-Transport Action Group},
@@ -57,6 +117,8 @@
   url          = {https://aviationbenefits.org/un-sustainable-development-goals/sdg-7-affordable-and-clean-energy/},
   urldate      = "June 21, 2022",
 }
+
+%REF 23:
 @online{ref23,
   author       = {Kundu, Rhik},
   organization = {Aviation Pros},
@@ -66,6 +128,8 @@
   url          = {https://www.aviationpros.com/airlines/news/21259169/airlines-in-a-fix-as-jet-fuel-costs-soar-amid-pickup-in-passenger-traffic},
   urldate      = "June 21, 2022",
 }
+
+%REF 24:
 @report{ref24,
   author       = {},
   organization = {Vantage Market Research},
@@ -75,6 +139,7 @@
   url          = {https://www.vantagemarketresearch.com/toc/electric-aircraft-market-1609},
   urldate      = "June 21, 2022",
 }
+
 @online{hkFuel,
   author       = "The Government of Hong Kong",
   title        = "Envionmental Impact Assessment Ordinance",
@@ -82,6 +147,7 @@
   url          = {https://www.epd.gov.hk/eia/register/report/eiareport/eia_1272006/EIA_Report/html/Sect11-FuelSpill-e.htm},
   urldate      = "", %need this
 }
+
 @online{fuelSpecs,
   author       = "Shell PLC",
   organization = "Shell Global",
@@ -91,12 +157,5 @@
   url          = {https://www.shell.com/business-customers/aviation/aviation-fuel/civil-jet-fuel-grades.html},
   urldate      = "", %need this
 }
-@online{fuelPrice,
-  author       = "",
-  title        = "Jet Fuel Price Monitor",
-  organization = "International Air Transport Association (IATA)",
-  year         = 2022,
-  url          = {https://www.iata.org/en/publications/economics/fuel-monitor/},
-  urldate      = "", %need this
-}
+
    
