--- a/appendices/fullApp.tex
+++ b/appendices/fullApp.tex
@@ -57,7 +57,7 @@ sat5652@psu.edu
     \item [Bill Grauer] is a former test engineer for Boeing's wind tunnel, vibration, and propulsion research facilities. He currently consults for Boeing's Philadelphia site and has over 40 years of experience in the aircraft manufacturing industry. Mr. Grauer provided technical insight into aircraft hybridization, biofuels' viability as propulsion energy, and the technical hurdles associated with an electric propulsion system. Being a propulsion test engineer, there was visibility provided into the usage of biofuels in existing or modified engine architecture. Additionally, a brief touch on the usage of rotary-winged aircraft for UAM shows that enormous technical hurdles remain in this sector. Mr. Grauer's involvement in the industry over a broad time period shows there is limited viability in the use of biofuels in existing or new airframes, and that electrically based propulsion is likely to be more well-received by -the airline industry, airport operators, and governmental bodies.
 \end{description}
 
-\section{Sign-off form for faculty advisor(s) and/or department chair(s)}
+\section{\texttt{Sign-off form for faculty advisor(s) and/or department chair(s)}}
 \noindent  This section comprises of a \texttt{.pdf} file that has not yet been filled out by the faculty advisor, in the event that our team decides to submit this publication for the competition.\par
 
 \newpage
