--- a/main.tex
+++ b/main.tex
@@ -16,7 +16,7 @@
 \usepackage[none]{hyphenat} %No hyphens
 \usepackage{etoc}
 \usepackage{enumerate}
-\usepackage[shortlabels]{enumitem}
+\usepackage{enumitem}
 %Bibliography configuration:
 \usepackage{biblatex}
 \usepackage[english]{babel}
@@ -105,7 +105,7 @@
 
 \clearpage
 \pagenumbering{arabic}% resets `page` counter to 1
-\renewcommand*{\thepage}{A-\arabic{page}}
+\renewcommand*{\thepage}{A\arabic{page}}
 
 \newpage
 \subfile{appendices/fullApp}
